Fixed visiblity default value.

--- a/createquiz/createquiz.css
+++ b/createquiz/createquiz.css
@@ -222,6 +222,6 @@ h3 {
     border: 2px solid #00000033;
 }
 
-#quizDesctription {
+#quizDescription {
 
 }
